# perxt

./: .gitignore  README.md  pyproject.toml  requires.txt  setup.py
perxt/: __init__.py  agdef.py  term.py
xt/: __init__.py  term.py
