[project]
name = "perxt"
description = "Personal PyXT commands"
readme = "README.md"
authors = [
    { name = "Daniel Miller", email = "millerdev@gmail.com" },
]
license = "MIT"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/millerdev/perxt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "perxt/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/perxt",
]
